fix(client): no category is too wide fix(client): categories don't have shadow fix(client): categories don't have pointer

--- a/client/src/pages/ListView/ListView.module.scss
+++ b/client/src/pages/ListView/ListView.module.scss
@@ -40,6 +40,7 @@
 .categoryContainer {
   width: calc(22.15em - 20px);
   padding: 20px;
+  cursor: pointer;
 }
 
 .categoryCircle {
